# o2g-calendar-sync

./: .gitignore  LICENSE  Pipfile  README.md  pyenv.cfg  pyproject.toml  setup.cfg
src/o2g_calendar_sync/: google_calendar.py
