[tool.poetry]
name = "o2g-calendar-sync"
version = "0.0.1"
description = "Syncs events from Outlook to Google Calendar"
authors = ["jonwilkey <jon.wilkey@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
google-api-python-client = "^2.36.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.4.6"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mypy = "^0.931"
black = "^21.12b0"
ipython = "^8.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
