[metadata]
name = o2g-calendar-sync
version = 0.0.1
author = Jon Wilkey
author_email = jon.wilkey@gmail.com
description = Syncs events from Outlook to Google Calendar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jonwilkey/o2g-calendar-sync
project_urls =
    Bug Tracker = https://github.com/jonwilkey/o2g-calendar-sync/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
